--- a/wp-content/themes/rcg/style.css
+++ b/wp-content/themes/rcg/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: rcg
-Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
+Theme Name: Rainmaker CG
+Theme URI: http://rainmakercg.com
+Author: Rainmaker CG
+Author URI: http://rainmakercg.com
 Description: Description
 Version: 1.0-wpcom
 License: GNU General Public License v2 or later
@@ -13,7 +13,7 @@ Tags:
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
- rcg is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic, Inc.
+This theme is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic, Inc.
 
 Resetting and rebuilding styles have been helped along thanks to the fine work of
 Eric Meyer http://meyerweb.com/eric/tools/css/reset/index.html
